# cocotbext-avalon

./: CONTRIBUTING.md  Makefile  README.md  requirements.txt  setup.cfg
.github/workflows/: build_icarus.yml  build_verilator.yml  lint.yml  setup_icarus.yml  setup_verilator.yml  test_checkin.yml
cocotbext/avalon/: __init__.py  avalon_bus.py  avalon_master.py
tests/test_slverr/: Makefile  regblock.sv  test_dut.py
