# package information
[metadata]
name = cocotbext_avalon
version = attr: cocotbext.avalon.version.__version__
description = Avalon-MM (Memory-Mapped) modules for cocotb
keywords = avalon, avalon-mm, cocotb, intel, altera
author = Dave Keeshan
author_email = dave.keeshan@daxzio.com
license = MIT
url = https://github.com/daxzio/cocotbext-avalon
project_urls =
    Bug Tracker = https://github.com/daxzio/cocotbext-avalon/issues
    Source Code = https://github.com/daxzio/cocotbext-avalon
download_url = https://github.com/daxzio/cocotbext-avalon/tarball/master
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Framework :: cocotb
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    cocotb>=1.9.0
    cocotb-bus>=0.2.0

[options.extras_require]
test =
    pytest
    pytest-xdist

[options.packages.find]
include = cocotbext.*

# pytest configuration
[tool:pytest]
testpaths =
    tests
addopts =
    --import-mode importlib

# ruff configuration
[tool:ruff]
line-length = 119
exclude = [".git", ".tox", "*.egg", "build", "__pycache__"]

[tool:ruff.lint]
ignore = ["E501"]  # Line too long (handled by line-length)
per-file-ignores = {"__init__.py" = ["F401"]}

